--- a/Template da Página/index.html
+++ b/Template da Página/index.html
@@ -165,8 +165,7 @@
           <h3 class="my-4"><b>Simples Vitamina de 6 Ingredientes Derrete Muita Gordura</b></h3>
 
           <!-- VSL -->
-          <script type="text/javascript"
-            id="scr_6226ac18aa8f7e000965d88e">var s = document.createElement("script"); s.src = "https://cdn.converteai.net/8b03b5e9-1e95-4b45-9063-037ac9b350ab/players/6226ac18aa8f7e000965d88e/player.js", s.async = !0, document.head.appendChild(s);</script>
+          <script type="text/javascript" id="scr_623788d696ef4b0009262795">var s=document.createElement("script");s.src="https://cdn.converteai.net/89146a0c-1f91-42fa-8a5b-d6a66abccb0f/players/623788d696ef4b0009262795/player.js",s.async=!0,document.head.appendChild(s);</script>
 
           <!-- Botão -->
           <div id="cta1" class="mt-4 d-none">
@@ -176,6 +175,13 @@
             </a>
           </div>
 
+          <div class="compra-segura" style="margin-top: 14px;">
+            <img width="435" height="52"
+              src="assets/img/compra-segura.png"
+              class="attachment-large size-large" alt="" loading="lazy"
+              srcset="assets/img/compra-segura.png 435w, assets/img/compra-segura.png 300w"
+              sizes="(max-width: 435px) 100vw, 435px" style="width:100%;height:11.95%;max-width:435px">
+          </div>
 
 
         </div>
@@ -437,8 +443,8 @@
       </div>
 
       <!-- Termos de Uso e Política de Privacidade -->
-      <div class="text-white mt-4" style="text-align: center;" ><a href="termos.html" class="text-white">Termos de Uso</a> | <a
-          href="privacidade.html" class="text-white">Política de Privacidade</a></div>
+      <div class="text-white mt-4" style="text-align: center;"><a href="termos.html" class="text-white">Termos de
+          Uso</a> | <a href="privacidade.html" class="text-white">Política de Privacidade</a></div>
 
     </div>
   </header>
