--- a/index.html
+++ b/index.html
@@ -165,11 +165,11 @@
           <h3 class="my-4"><b>Simples Vitamina de 6 Ingredientes Derrete Muita Gordura</b></h3>
 
           <!-- VSL -->
-          <script type="text/javascript" id="scr_623788d696ef4b0009262795">var s=document.createElement("script");s.src="https://cdn.converteai.net/89146a0c-1f91-42fa-8a5b-d6a66abccb0f/players/623788d696ef4b0009262795/player.js",s.async=!0,document.head.appendChild(s);</script>
+          <script type="text/javascript" id="scr_6237b91d96ef4b00092627d6">var s=document.createElement("script");s.src="https://cdn.converteai.net/89146a0c-1f91-42fa-8a5b-d6a66abccb0f/players/6237b91d96ef4b00092627d6/player.js",s.async=!0,document.head.appendChild(s);</script>
 
           <!-- Botão INICIO -->
           <div id="cta1" class="mt-4 d-none">
-            <a href="https://pay.kiwify.com.br/8yj82EU" class="a-btn" style="text-decoration: none;">
+            <a href="https://pay.kiwify.com.br/d4lpygD" class="a-btn" style="text-decoration: none;">
               <span class="span-btn">QUERO OBTER ACESSO!</span>
               <span class="span-btn2">(atenção: vagas limitadas)</span>
             </a>
@@ -453,12 +453,8 @@
     </div>
   </header>
 
-
-
-
-
   <script type="text/javascript">
-    setTimeout(() => { document.getElementById("cta1").classList.remove("d-none") }, 10000); // temporização da Call to Action (em milissegundos 1706000)
+    setTimeout(() => { document.getElementById("cta1").classList.remove("d-none") }, 1706000); // temporização da Call to Action (em milissegundos 1706000)
   </script>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
