--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
           <h3 class="my-4"><b>DERRETE BASTANTE GORDURA: </b>Simples Vitamina de 6 Ingredientes deixa Chocados o Mundo
             Científico</h3>
 
-          <h5 style="font-size: 15px;" class="my-4"><b><img src="./assets/img/icone-seta-pra-baixo.svg">Veja o vídeo</b> e entenda tudo até o Final<img
-              src="./assets/img/icone-seta-pra-baixo.svg"></h5>
+          <h5 style="font-size: 15px;" class="my-4"><b><img src="./assets/img/icone-seta-pra-baixo.svg">Veja o vídeo</b>
+            e entenda tudo até o Final<img src="./assets/img/icone-seta-pra-baixo.svg"></h5>
 
           <!-- VSL -->
           <script type="text/javascript"
@@ -434,15 +434,10 @@
                     </div>
                   </div>
                   <div class="fakerow display_none" id=fakecomments_escrevendo style=display:none>
-
-
                   </div>
                   <div class=fakerow>
                     <span class=fakemaisantigos>Ver comentários mais Recentes</span>
                   </div>
-
-
-
                 </div>
 
               </div>
@@ -452,18 +447,14 @@
               <p>Em breve retiraremos o vídeo do ar! Aproveite e veja AGORA!</p>
             </div>
 
+            <!-- Termos de Uso e Política de Privacidade -->
+            <div class="text-white mt-4" style="text-align: center;"><a href="termos.html" class="text-white">Termos de
+                Uso</a> | <a href="privacidade.html" class="text-white">Política de Privacidade</a></div>
+
           </div>
           <!-- BOTÂO FIM -->
-
         </div>
       </div>
-
-
-
-      <!-- Termos de Uso e Política de Privacidade -->
-      <div class="text-white mt-4" style="text-align: center;"><a href="termos.html" class="text-white">Termos de
-          Uso</a> | <a href="privacidade.html" class="text-white">Política de Privacidade</a></div>
-
     </div>
   </header>
 
