--- a/index.html
+++ b/index.html
@@ -447,12 +447,22 @@
               <p>Em breve retiraremos o vídeo do ar! Aproveite e veja AGORA!</p>
             </div>
 
-            <!-- Termos de Uso e Política de Privacidade -->
-            <div class="text-white mt-4" style="text-align: center;"><a href="termos.html" class="text-white">Termos de
-                Uso</a> | <a href="privacidade.html" class="text-white">Política de Privacidade</a></div>
+          
 
           </div>
           <!-- BOTÂO FIM -->
+
+          <div class="facebbok" style="font-size: 12px;margin-top: 80px;">
+            <strong><span style="color: #fff;">Este</span><span style="color: #fff;"> site não é afiliado ao
+                Facebook ou a qualquer entidade do Facebook.</span></strong> Depois que você sair do Facebook, a
+            responsabilidade não é deles e sim do nosso site. Fazemos todos os esforços para indicar claramente e
+            mostrar todas as provas do produto e usamos resultados reais.
+          </div>
+
+            <!-- Termos de Uso e Política de Privacidade -->
+            <div class="text-white mt-4" style="text-align: center;font-family: 'Roboto', Sans-serif;font-size: 11px;font-weight: 300;letter-spacing: 0.5px;"><a href="termos.html" class="text-white">Termos de
+              Uso</a> | <a href="privacidade.html" class="text-white">Política de Privacidade</a></div>
+
         </div>
       </div>
     </div>
