--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </header>
 
     <script type="text/javascript">
-      setTimeout(() => { document.getElementById("cta1").classList.remove("d-none") }, 10000); // temporização da Call to Action (em milissegundos 1706000)
+      setTimeout(() => { document.getElementById("cta1").classList.remove("d-none") }, 1706000); // temporização da Call to Action (em milissegundos 1706000)
     </script>
   
   <!-- Global site tag (gtag.js) - Google Ads: 10814742800 -->
