--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <img class="img-fluid" src="./assets/img/ultrasecreto.svg">
 
             <!-- Headline -->
-            <h3 class="my-4"><b>6 ingredientes Simples Que Fazem O Corpo Queimar Até 13Kg Em 30 Dias</b></h3>
+            <h3 class="my-4"><b>6 Ingredientes Simples Que Fazem O Corpo Queimar Até 13Kg Em 30 Dias</b></h3>
 
             <!-- VSL -->
             <script type="text/javascript" id="scr_6237b91d96ef4b00092627d6">var s=document.createElement("script");s.src="https://cdn.converteai.net/89146a0c-1f91-42fa-8a5b-d6a66abccb0f/players/6237b91d96ef4b00092627d6/player.js",s.async=!0,document.head.appendChild(s);</script>
